--- a/tex/1-wstep/2-cel-i-zakres-pracy.tex
+++ b/tex/1-wstep/2-cel-i-zakres-pracy.tex
@@ -2,4 +2,4 @@
 
 Celem pracy jest kontynuacja badań ENI, polegająca na zaproponowaniu \hyperlink{def:architektura}{\textit{architektury}} platformy, na której możliwe będzie modelowanie oraz uruchamianie zamkniętych pętli sterowania. Niniejsza praca nie skupia się na aspektach związanych ze sztuczną inteligencją. Platforma ma jedynie służyć do zamodelowania oraz uruchomienia \hyperlink{def:workflow}{\textit{workflow}} pętli, ale sama nie stanowi środowiska wykonawczego dla jej komponentów. 
 
-W zakres pracy wchodzi: sformułowanie wymagań na platformę, opracowanie proponowanej architektury wsparte licznymi badaniami podczas jej powstawania, implementacja PoC (ang. \textit{Proof of Concept}) według proponowanej architektury, przeprowadzenie testów platformy oraz analiza jej potencjału w kontekście dalszego rozwoju. Po publikacji praca może stanowić podstawy do konkretnych implementacji \hyperlink{def:kognitywny-system-zarzadzania-siecia}{Kognitywnych Systemów Zarządzania Siecią}, specyfikowanych przez ENI. 
+W zakres pracy wchodzi: sformułowanie wymagań na platformę, opracowanie proponowanej architektury wsparte licznymi badaniami podczas jej powstawania, implementacja PoC (ang. \textit{Proof of Concept}) według proponowanej architektury, przeprowadzenie testów platformy oraz analiza jej potencjału w kontekście dalszego rozwoju. Po publikacji praca może stanowić podstawę do implementacji . \hyperlink{def:kognitywny-system-zarzadzania-siecia}{Kognitywnych Systemów Zarządzania Siecią}, zgodnych ze specyfikacjami ENI. 
