--- a/tex/2-stan-wiedzy/4-przeglad.tex
+++ b/tex/2-stan-wiedzy/4-przeglad.tex
@@ -1,6 +1,6 @@
 \subsection{Przegląd literatury}
 \subsubsection{Wstęp}
-Rozważania na temat inteligentnych systemów w kontekście niniejszej pracy należy zacząć od artykułu opublikowanego przez IBM w 2003 roku \cite{kephart2003}. Wskazuje on, iż ówczesne systemy informatyczne stają się coraz bardziej skomplikowane, co prowadzi do kryzysy zarządzania. Ręczna administracja przestaje być skalowalna, ponieważ systemy wymagają coraz większej liczby specjalistów do instalacji, konfiguracji oraz optymalizacji. IBM wskazuje, że jedyną opcją poradzenia sobie z tym problemem jest Autonomiczne Przetwarzanie (ang. \textit{Autonomic Computing}). Nawiązuje ono do autonomicznego układu nerwowego człowieka, który zarządza pracą naszego serca lub utrzymaniem temperatury ciała, zwalniając świadomą część mózgu z tych obowiązków. W kontekście systemów informatycznych człowiek zwolniony by był z konfiguracji, optymalizacji, naprawy oraz ochrony, gdyż powstałe system były by "Self-CHOP" (ang. \textit{Self-Configuration, Self-Optimization, Self-Healing, Self-Protection}). Jest to ważne pojęcie stanowiące podwaliny wielu dalszych badań. Architektura autonomicznych systemów przedstawiona jest na rysunku \ref{fig:24-ibm}.
+Rozważania na temat inteligentnych systemów w kontekście niniejszej pracy należy zacząć od artykułu opublikowanego przez IBM w 2003 roku \cite{kephart2003}. Wskazuje on, iż ówczesne systemy informatyczne stają się coraz bardziej skomplikowane, co prowadzi do kryzysu zarządzania. Ręczna administracja przestaje być skalowalna, ponieważ systemy wymagają coraz większej liczby specjalistów do instalacji, konfiguracji oraz optymalizacji. IBM wskazuje, że jedynym rozwiązaniem tego problemu jest Autonomiczne Przetwarzanie (ang. \textit{Autonomic Computing}). Nawiązuje ono do autonomicznego układu nerwowego człowieka, który zarządza pracą naszego serca lub utrzymaniem temperatury ciała, zwalniając świadomą część mózgu z tych obowiązków. W kontekście systemów informatycznych człowiek zwolniony by był z konfiguracji, optymalizacji, naprawy oraz ochrony, gdyż powstałe system były by "Self-CHOP" (ang. \textit{Self-Configuration, Self-Optimization, Self-Healing, Self-Protection}). Jest to ważne pojęcie stanowiące podwaliny wielu dalszych badań. Architektura autonomicznych systemów przedstawiona jest na rysunku \ref{fig:24-ibm}.
 
 \begin{figure}[!htbp]
     \centering \includegraphics[width=1.0\linewidth]{24-ibm.png}
@@ -18,7 +18,7 @@ Należy w tym momencie rozróżnić pojęcia Automatyzacji i Autonomiczności. P
     \item \textbf{ETSI GR ENI} - specyfikuje referencyjną architekturę kognitywnych systemów zarządzania siecią używając zamkniętych pętli sterowania oraz świadomych kontekstu polityk. O ile ETSI GS ZSM skupia się na technikach automatyzacji zarządzania oraz udostępniania usług end-to-end, to ENI koncentruje się na technikach AI, zarządzaniu poprzez polityki oraz zamkniętych pętlach sterowania.
 \end{itemize}
 
-Powyższe architektury zostaną dokładniej opisane w dalszej części pracy (zwłaszcza w części badawczej). Istotne na ten moment jest to, ze każda z tych architektur opiera swoje działanie o zamknięte pętle sterowania, co przewidział z resztą artykuł \cite{fallon2019}. Wskazuje on, iż badanie oraz stosowanie zamkniętych pętli sterowania jest dosyć starą dyscypliną sięgającą aż od ery pary \footnote{\url{https://en.wikipedia.org/wiki/Age_of_Steam}} (Rysunek \ref{fig:24-his}). Stosowane są one z powodzeniem w systemach morskich, lotniczych, motoryzacyjnych, przemysłowych ale też mikroprocesorach, systemach wbudowanych czy sterownikach urządzeń. Mimo że tego typu systemy są często złożone, cechują się determinizmem i dobrze określonymi granicami, co sprawia, że świetnie nadają się do zastosowania teorii sterowania\footnote{\url{https://en.wikipedia.org/wiki/Control_theory}}. Systemy telekomunikacyjne natomiast są słabo określonymi, stochastycznymi systemami, co sprawia, że zastosowanie teorii sterowania do ich zarządzania okazuje się wyjątkowo trudne. Stąd duże opóźnienie w ich adaptacji w branży telekomunikacyjnej. Od czasu pojawienia się propozycji Autonomicznego Zarządzania \cite{kephart2003} w 00s oraz enablerów w postaci SDN\&NFV w 10s zaczęły się pojawiać implementacje zamkniętych pętli sterowania w telekomunikacji. Niestety są one bardzo pragramtyczne i sztywne, skupione jedynie na dowożeniu danej funkcjonalności. Dodatkową problematyczność zagadnienia sprawia konieczność integracji systemów od wielu różnorodnych dostawców.
+Powyższe architektury zostaną dokładniej opisane w dalszej części pracy (zwłaszcza w części badawczej). Istotne na ten moment jest to, ze każda z tych architektur opiera swoje działanie o zamknięte pętle sterowania, co przewidział z resztą artykuł \cite{fallon2019}. Wskazuje on, iż badania nad zamkniętymi pętlami sterowania to dyscyplina o długiej historii, sięgająca aż epoki pary \footnote{\url{https://en.wikipedia.org/wiki/Age_of_Steam}}. (Rysunek \ref{fig:24-his}). Stosowane są one z powodzeniem w systemach morskich, lotniczych, motoryzacyjnych, przemysłowych ale też mikroprocesorach, systemach wbudowanych czy sterownikach urządzeń. Mimo że tego typu systemy są często złożone, cechują się determinizmem i dobrze określonymi granicami, co sprawia, że świetnie nadają się do zastosowania teorii sterowania\footnote{\url{https://en.wikipedia.org/wiki/Control_theory}}. Systemy telekomunikacyjne natomiast są słabo określonymi, stochastycznymi systemami, co sprawia, że zastosowanie teorii sterowania do ich zarządzania okazuje się wyjątkowo trudne. Stąd duże opóźnienie w ich adaptacji w branży telekomunikacyjnej. Od czasu pojawienia się koncepcji Autonomicznego Zarządzania \cite{kephart2003} w latach 2000 oraz technologii wspierających, takich jak SDN i NFV, w latach 2010 zaczęły pojawiać się implementacje zamkniętych pętli sterowania w telekomunikacji. Niestety są one bardzo pragmatyczne i sztywne, skupione jedynie na dowożeniu danej funkcjonalności. Dodatkową problematyczność zagadnienia sprawia konieczność integracji systemów od wielu różnorodnych dostawców.
 
 \begin{figure}[!htbp]
     \centering \includegraphics[width=1.0\linewidth]{24-his.png}
@@ -77,7 +77,7 @@ Nadrzędnym celem projektowym ZSM jest umożliwienie nie wymagającego udziału 
 
 Framework ZSM podąża za trendem w branży polegającym na odejściu od monolitycznych ściśle powiązanych systemów na rzecz bardziej elastycznych zestawów usług zarządzania (ang. \textit{management services}). Referencyjna architektura ZSM określa zestaw elementów składowych (ang. \textit{building blocks}), które wspólnie umożliwiają konstruowanie bardziej złożonych usług i funkcji zarządzania. Konstrukcja ta odbywa się zgodnie ze wzorcami kompozycji i współdziałania (ang. \textit{composition and interoperation patterns}). 
 
-Logicznie, framework ZSM składa się z rozproszonych serwisów zarządzania (ang. \textit{management services} i serwisów danych (ang. \textit{data services}), które zorganizowane są w domeny zarządzania (ang. \textit{management domains}) oraz zintegrowane poprzez powłokę integracyjną (ang. \textit{integration fabric}). Powłoka integracyjna również jest uzywana do komunikacji serwisów zarządzania z systemami zewnętrznymi.
+Logicznie, framework ZSM składa się z rozproszonych serwisów zarządzania (ang. \textit{management services}) i serwisów danych (ang. \textit{data services}), które zorganizowane są w domeny zarządzania (ang. \textit{management domains}) oraz zintegrowane poprzez powłokę integracyjną (ang. \textit{integration fabric}). Powłoka integracyjna również służy do komunikacji serwisów zarządzania z systemami zewnętrznymi.
 
 Architektura referencyjna zapewnia środki do budowania i komponowania luźno powiązanych funkcji zarządzania (ang. \textit{management functions}), które oferują serwisy zarządzania i wspólnie zapewniają kompleksowe zarządzanie danej domeny w sposób "zero-touch". Aby oferować swoje serwisy, funkcje udostępniają możliwość ich wywoływania i komunikacji z nimi za pomocą end-point'ów. 
 
@@ -125,7 +125,7 @@ W \cite{tmforum2021} przedstawiono architekturę logiczną (Rysunek )
     \caption{Architektura logiczna CLADRA}\label{fig:24-tmforum-arch}
 \end{figure}
 
-Opiera się ona na pętli OODA. Krok "Observe" jest odpowiedzialny za zbieranie danych z sieci, na podstawie których w drodze analizy budowana jest informacja w fazie "Orient". W kroku "Decide" podejmowane i modelowane są decyzje, które przekładają się na konkretne workflow do wykonania. Krok "Act" orkiestruje wykonaniem workflow na zarządzanych zasobach. Warto zwrócić tu uwagę na aspekt, iż workflow akcji rekoncylacyjnych do wykonania jest dopiero wnioskowane podczas iteracji pętli (w kontraście do workflow zdefiniowanego przed runtime danej iteracji). Jest to architektura na innym poziomie abstrakcji niż architektura ZSM. Konkretne jej implementacje przedstawione w \cite{tmforum2022} różnią się bardzo od siebie i tak jak wskazano w \cite{fallon2019} są bardzo sztywne i skierowane na dany use-case. Natomiast podobnie jak architektura ETSI ZSM przewidywane jest uruchamianie na jednej platformie wielu różnych instancji pętli jednocześnie. Celem tych pętli jest autonomiczne zarządzanie realizowane za pomocą komunikacji z zewnętrznymi względem tej platformy zasobami. 
+Opiera się ona na pętli OODA. Krok "Observe" jest odpowiedzialny za zbieranie danych z sieci, na podstawie których w drodze analizy budowana jest informacja w fazie "Orient". W kroku "Decide" podejmowane i modelowane są decyzje, które przekładają się na konkretne workflow do wykonania. Krok "Act" orkiestruje wykonaniem workflow na zarządzanych zasobach. Warto zwrócić tu uwagę na aspekt, iż workflow akcji rekoncyliacyjnych do wykonania jest dopiero wnioskowane podczas iteracji pętli (w kontraście do workflow zdefiniowanego przed runtime danej iteracji). Jest to architektura na innym poziomie abstrakcji niż architektura ZSM. Konkretne jej implementacje przedstawione w \cite{tmforum2022} różnią się bardzo od siebie i tak jak wskazano w \cite{fallon2019} są bardzo sztywne i skierowane na dany use-case. Natomiast podobnie jak architektura ETSI ZSM przewidywane jest uruchamianie na jednej platformie wielu różnych instancji pętli jednocześnie. Celem tych pętli jest autonomiczne zarządzanie realizowane za pomocą komunikacji z zewnętrznymi względem tej platformy zasobami. 
 
 \cite{tmforum2022ai} prezentuje koncepcję Menedżera Zamkniętych Pętli (ang. \textit{Closed Loop Manager}), czyli komponentu architektury odpowiedzialnego za zarządzanie pętlami sterowania. Podobna kwestia poruszana jest również przez \cite{ngmn2022}. Taki menadżer w kontekście pętli sterowania jest odpowiedzialny za:
 \begin{itemize}
