--- a/tex/3-architektura/2-wymagania-i-zalozenia.tex
+++ b/tex/3-architektura/2-wymagania-i-zalozenia.tex
@@ -2,7 +2,7 @@
 
 \subsubsection{Wstęp}
 
-Niniejsy rozdział opisuje proces formułowania wymagań i założeń na platformę Lupus, przedstawiając przy tym aspekt badawczy pracy, który w całości został zebrany w jedno miejsce w celu łatwiejszego zobrazowania tego zagadnienia. Następne podrozdziały tego rozdziału przedstawiają architekturę w stanie końcowym, abstrahując od poniższej dyskusji. Taki podział ma nadzieję przynieść łatwiejszy odbiór czytelnikowi. Opis w tym podrozdziale opiera się na analizach architektur systemów zarządzania i pętli sterowania przeprowadzonym w rozdziale poprzednim.
+Niniejszy rozdział opisuje proces formułowania wymagań i założeń na platformę Lupus, przedstawiając przy tym aspekt badawczy pracy, który w całości został zebrany w jedno miejsce w celu łatwiejszego zobrazowania tego zagadnienia. Następne podrozdziały tego rozdziału przedstawiają architekturę w stanie końcowym, abstrahując od poniższej dyskusji. Taki podział ma nadzieję przynieść łatwiejszy odbiór czytelnikowi. Opis w tym podrozdziale opiera się na analizach architektur systemów zarządzania i pętli sterowania przeprowadzonym w rozdziale poprzednim.
 
 \subsubsection{Wymagania ogólne}
 
@@ -88,9 +88,9 @@ Zmaterializowanie zamknietej pęli sterowania jako zasób Kubernetes spełnia wy
 
 W ten sposób pokryto dwie grupy wymagań: na środowisko wykonawcze oraz na zarządzanie pętlami. Dalsza część pracy skupiała się na eksploracji możliwości pokrycia wymagań na modelowanie pętli. Z racji wyboru Kubernetes oraz Wzorca Operatora, modelowanie pętli oraz urzeczywistnienie tego modelowania, czyli wykonanie jej logiki (workflow) polega na zaproponowaniu notacji używanej w pliku YAML wraz z odpowiednim zaprojektowaniu operatora. 
 
-Kontrolery w Kubernetes działają na zasadzie zamkniętej pętli sterowania. Gdy w zarządzanym przez nich obiekcie dojdzie do jakichś zmian, zostają one o tym poinformowane. Misją kontrolera jest sprawdzić wtedy rozbieżności między stanem aktualnym, a stanem pożądanym i jeśli takowa występuje wykonać operacje doprowadzające stan aktualny do postaci pożądanego. Taki proces nazywamy rekoncylacją. Oznacza on pogodzenie ze sobą dwóch chwilowo rozbieżnych stanów. Stan aktualny wyrażony jest jako \texttt{status} danego zasobu i zapisany w bazie etcd\footnote{\url{https://bulldogjob.pl/readme/etcd-czyli-mozg-klastra-kubernetes}}, zaś stan pożądany zdefiniowany jest w pliku YAML jako pole \texttt{spec} jak i również przechowywany w bazie etcd. Gdy z jakiegoś powodu dojdzie do zmiany jednego z tych pól warstwa sterowania Kubernetes pobudza kontroler żądaniem o rekoncylacje. Mechanizm ten nasuwa pomysł na spełnienie wymagania \ref{req:4}. Komunikacja elementów mogła by polegać na wzajemnym pobudzaniu się zmianami pola \texttt{status} w obiektach ich reprezentujących. Dlatego podjęto decyzję, iż każdy element pętli będzie reprezentowany poprzez obiekt Kubernetes\footnote{url{https://kubernetes.io/docs/concepts/overview/working-with-objects/}} typu własnego o nazwie \texttt{Element}.
+Kontrolery w Kubernetes działają na zasadzie zamkniętej pętli sterowania. Gdy w zarządzanym przez nich obiekcie dojdzie do jakichś zmian, zostają one o tym poinformowane. Misją kontrolera jest sprawdzić wtedy rozbieżności między stanem aktualnym, a stanem pożądanym i jeśli takowa występuje wykonać operacje doprowadzające stan aktualny do postaci pożądanego. Taki proces nazywamy rekoncyliacją. Oznacza on pogodzenie ze sobą dwóch chwilowo rozbieżnych stanów. Stan aktualny wyrażony jest jako \texttt{status} danego zasobu i zapisany w bazie etcd\footnote{\url{https://bulldogjob.pl/readme/etcd-czyli-mozg-klastra-kubernetes}}, zaś stan pożądany zdefiniowany jest w pliku YAML jako pole \texttt{spec} jak i również przechowywany w bazie etcd. Gdy z jakiegoś powodu dojdzie do zmiany jednego z tych pól warstwa sterowania Kubernetes pobudza kontroler żądaniem o ę. Mechanizm ten nasuwa pomysł na spełnienie wymagania \ref{req:4}. Komunikacja elementów mogła by polegać na wzajemnym pobudzaniu się zmianami pola \texttt{status} w obiektach ich reprezentujących. Dlatego podjęto decyzję, iż każdy element pętli będzie reprezentowany poprzez obiekt Kubernetes\footnote{url{https://kubernetes.io/docs/concepts/overview/working-with-objects/}} typu własnego o nazwie \texttt{Element}.
 
-Dane, którymi ma być zrealizowane pobudzanie wpisywane by były do pola \texttt{status}, które operator może odczytać w trakcie rekoncylacji obiektu. Zasób własny reprezentujący całą pętle nazwany został dla rozróżnienia \texttt{Master}. Uczynienie elementu pętli obiektem Kubernetes spełnia wymaganie \ref{req:6}, albowiem obiekty te istnieją nieustannie w klastrze, a ich kontrolery mogą zostać wywołane w dowolnym momencie poprzez zażądanie rekoncylacji. W momencie gdy zasób \texttt{Element} reprezentuje pojedynczy element pętli, \texttt{Master} odpowiedzialny jest za instancjonowanie oraz zarządzanie cyklem życia elementów. Operator zasobu \texttt{Master} uruchamiany jest raz w momencie instancjonowania jego obiektu. Czyta on wtedy plik YAML, który mówi mu jakie elementy ma utworzyć. Z racji, że elementy specyfikują model pętli to jego notacja powinna być zestandaryzowana i ujednolicona (zgodnie z wmyaganiem \ref{req:11}). Notacje nazwano LupN. 
+Dane, którymi ma być zrealizowane pobudzanie wpisywane by były do pola \texttt{status}, które operator może odczytać w trakcie rekoncyliacji obiektu. Zasób własny reprezentujący całą pętle nazwany został dla rozróżnienia \texttt{Master}. Uczynienie elementu pętli obiektem Kubernetes spełnia wymaganie \ref{req:6}, albowiem obiekty te istnieją nieustannie w klastrze, a ich kontrolery mogą zostać wywołane w dowolnym momencie poprzez zażądanie rekoncyliacji. W momencie gdy zasób \texttt{Element} reprezentuje pojedynczy element pętli, \texttt{Master} odpowiedzialny jest za instancjonowanie oraz zarządzanie cyklem życia elementów. Operator zasobu \texttt{Master} uruchamiany jest raz w momencie instancjonowania jego obiektu. Czyta on wtedy plik YAML, który mówi mu jakie elementy ma utworzyć. Z racji, że elementy specyfikują model pętli to jego notacja powinna być zestandaryzowana i ujednolicona (zgodnie z wymaganiem \ref{req:11}). Notacje nazwano LupN. 
 
 Notacja LupN opisuje elementy pętli oraz komunikacje między nimi. Opiera się ona na obiektach, które podczas pobudzenia danego elementu są interpretowane przez operator. Każdy element posiada obiekt akcji, który definiuje jego wewnętrzne workflow (w celu spełnienia wymagania \ref{req:9}) oraz obiekt o nazwie \texttt{next} reprezentujący komponenty, do których należy przekazać swoje dane wyjściowe. W celu spełnienia wymagania \ref{req:8} obiekt \texttt{next} może reprezentować albo inne elementy danej pętli albo komponenty systemu zarządzania odpowiedzialne za część obliczeniową logiki pętli. W przypadku elementów końcowych może to być też środowisko zewnętrze. Komponenty odpowiedzialne za część obliczeniową logiki pętli oraz środowisko zewnętrzne jest reprezentowane przez obiekt Destynacji, który specyfikuje komunikację za pośrednictwem protokołu HTTP. Wybór wsparcia tego protokołu jest podyktowany jest szeroką adaptacją w systemach rozproszonych korzystających z architektur mikroserwisowych.
 
