--- a/tex/4-implementacja/1-wstep.tex
+++ b/tex/4-implementacja/1-wstep.tex
@@ -1,2 +1,2 @@
 \subsection{Wstęp}
-Rozdział ten opisuje wydzieloną z architektury implementację Lupus. Pierwsza jej części opisuje kluczowe mechanizmy Kubernetes, za pomocą których zaimplementowano Lupus. Druga część opowiada o decyzjach podjętych podczas developmentu platformy.
+Rozdział ten opisuje wydzieloną z implementację Lupus. Pierwsza część rozdziału opisuje kluczowe mechanizmy Kubernetes, wykorzystane przy implementacji Lupus. Druga część przedstawia decyzje podjęte podczas implementacji platformy.
