--- a/tex/5-test/2-emulator-5g.tex
+++ b/tex/5-test/2-emulator-5g.tex
@@ -11,7 +11,7 @@ Pierwszym komponentem emulatora jest otwartoźródłowe oprogramowanie Open5GS. 
 
 \subsubsection{UERANSIM}
 
-Drugim komponentem emulatora jest otwartoźródłowe oprogramowanie UERANSIM. Oficjalna strona projektu: \url{https://github.com/aligungr/UERANSIM}. UERANSIM symuluje Radiową Sieć Dostępową (ang. \textit{Radio Access Network (RAN)}) wraz z Terminalami Abonenta (ang. \textit{User Equipment (UE)}). UERANSIM składa się z dwóch programów \texttt{nr-ue} oraz \texttt{nr-gnb}, które można uruchamiać w wielu instancjach. Ich rolę w architekturze sieci 5G przedstawiono na rysunku \ref{fig:52-ueransim} w czerwonej obwódce.
+Drugim komponentem emulatora jest otwartoźródłowe oprogramowanie UERANSIM. Oficjalna strona projektu: \url{https://github.com/aligungr/UERANSIM}. UERANSIM symuluje Radiową Sieć Dostępową (ang. \textit{Radio Access Network (RAN)}) wraz z Terminalami Abonenta (ang. \textit{User Equipment (UE)}). UERANSIM składa się z dwóch programów \texttt{nr-ue} oraz \texttt{nr-gnb}, które mogą działać w wielu instancjach. Ich rolę w architekturze sieci 5G przedstawiono na rysunku \ref{fig:52-ueransim} w czerwonej obwódce.
 
 \begin{figure}[!h]
     \centering \includegraphics[width=1\linewidth]{52-ueransim.png}
