--- a/tex/2-stan-wiedzy/1-wstep.tex
+++ b/tex/2-stan-wiedzy/1-wstep.tex
@@ -1,3 +1,3 @@
 \subsection{Wstęp}
 
-Rozdział ten stanowi krótki wstęp historyczny problemu jakiego podejmuje się praca oraz przytacza kluczowe znaleziska z powiązanej literatury w celu identyfikacji luki badawczej. 
+Rozdział ten stanowi krótki historyczny wstęp do problematyki poruszanej w pracy oraz przedstawia kluczowe wyniki badań z powiązanej literatury w celu identyfikacji luki badawczej.
