--- a/tex/5-test/1-wstep.tex
+++ b/tex/5-test/1-wstep.tex
@@ -1,3 +1,3 @@
 \subsection{Wstęp}
 
-Niniejsza sekcja omawia przypadek użycia (ang. \textit{use case}) proponowanej architektury na emulatorze sieci 5G stworzonej za pomocą Open5GS oraz UERANSIM. Przedstawia emulator sieci 5G sam w sobie. Następnie prezentuje przykładowy \hyperlink{def:problem-zarzadzania}{\textbf{Problem Zarządzania}} oraz zaaplikowanie \hyperlink{def:lupus}{\textbf{Lupus}} w celu rozwiązywania tego problemu. Sekcja omawia proces pojedynczego \hyperlink{def:wdrozenie-lupus}{\textbf{Wdrożenia Lupus}}.
+Niniejszy rozdział omawia przypadek użycia (ang. \textit{use case}) proponowanej architektury na emulatorze sieci 5G stworzonej za pomocą Open5GS oraz UERANSIM. Opisuje również sam emulator sieci 5G. Następnie prezentuje przykładowy \hyperlink{def:problem-zarzadzania}{\textbf{Problem Zarządzania}} oraz zastosowanie \hyperlink{def:lupus}{\textbf{Lupus}} w celu rozwiązywania tego problemu. Sekcja omawia proces pojedynczego \hyperlink{def:wdrozenie-lupus}{\textbf{Wdrożenia Lupus}}.
